--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
-{
+{  
+  "engines": {
+    "node": ">=14.20.1"
+  },
   "name": "hospital_api",
   "version": "1.0.0",
   "description": "Backend_test3",
